--- a/styles/global.css
+++ b/styles/global.css
@@ -61,6 +61,7 @@ footer p {
 
 button {
     background-color: #e98a0d;
+    color: #f7f7f7;
     border: none;
     padding: 15px 30px;
     font-size: 1.2em;
