--- a/styles/solver.css
+++ b/styles/solver.css
@@ -1,92 +1,117 @@
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  flex-direction: column;
 }
 
 .container {
-    display: grid;
-    grid-template-areas: 
-        ". top . ."
-        "left front right back"
-        ". bottom . .";
-    gap: 10px;
+  display: grid;
+  grid-template-areas:
+    ". top . ."
+    "left front right back"
+    ". bottom . .";
+  gap: 10px;
 }
 
 .face {
-    display: grid;
-    grid-template-columns: repeat(3, 50px);
-    grid-template-rows: repeat(3, 50px);
-    gap: 5px;
+  display: grid;
+  grid-template-columns: repeat(3, 50px);
+  grid-template-rows: repeat(3, 50px);
+  gap: 5px;
 }
 
 .face div {
-    background-color: white;
-    border: 1px solid #bababa;
-    cursor: pointer;
+  background-color: white;
+  border: 1px solid #bababa;
+  cursor: pointer;
 }
 
 #top-face {
-    grid-area: top;
+  grid-area: top;
 }
 
 #left-face {
-    grid-area: left;
+  grid-area: left;
 }
 
 #front-face {
-    grid-area: front;
+  grid-area: front;
 }
 
 #right-face {
-    grid-area: right;
+  grid-area: right;
 }
 
 #bottom-face {
-    grid-area: bottom;
+  grid-area: bottom;
 }
 
 #back-face {
-    grid-area: back;
+  grid-area: back;
 }
 
 .color-selector {
-    display: flex;
-    margin-top: 20px;
+  display: flex;
+  margin: 20px;
 }
 
 .color {
-    width: 40px;
-    height: 40px;
-    margin: 5px;
-    border: 2px solid #333;
-    cursor: pointer;
-}
-
-/* Add these styles to the end of your CSS file */
-
-#solve-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #e98a0d;
-    border: none;
-    color: white;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-#solve-button:hover {
-    background-color: #ee9522;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  border: 2px solid #333;
+  cursor: pointer;
 }
 
 #solution-output {
-    margin-top: 20px;
-    font-size: 18px;
-    color: #333;
-    font-weight: bold;
+  margin-top: 20px;
+  font-size: 18px;
+  color: #333;
+  font-weight: bold;
+}
+
+#camera {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+
+#camera button {
+  margin: 10px;
+}
+
+#buttonRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+canvas {
+  border: 2px solid #333;
+  border-radius: 8px;
+  margin: 15px;
+}
+
+label {
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+select {
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  cursor: pointer;
+  outline: none;
 }
