--- a/styles/index.css
+++ b/styles/index.css
@@ -1,41 +1,42 @@
 #howtosolve {
-    text-align: center;
-    padding: 50px 20px;
-    border-radius: 10px;
-    margin: 15px auto;
-    max-width: 600px;
+  text-align: center;
+  padding: 50px 20px;
+  border-radius: 10px;
+  margin: 15px auto;
+  max-width: 600px;
 }
 
 #howtosolve h1 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    color: #040316;
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: #040316;
 }
 
 #cards {
-    display: flex;
-    column-gap: 5vh;
-    flex-wrap: wrap;
-    padding: 20px 20px;
-    justify-content: center;
+  display: flex;
+  column-gap: 5vh;
+  flex-wrap: wrap;
+  padding: 20px 20px;
+  justify-content: center;
 }
 
 #cards article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    height: 200px;
-    background: #f0f0f0;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    text-align: center;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 200px;
+  background: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  text-align: center;
+  padding: 10px;
+  padding-top: 5px;
 }
 
 #cards h1 {
-    font-size: 1.3em;
-    margin-bottom: 10px;
+  font-size: 1.5em;
+  margin-bottom: 15px;
 }
