--- a/styles/solver.css
+++ b/styles/solver.css
@@ -115,3 +115,10 @@ select {
   cursor: pointer;
   outline: none;
 }
+
+#container-cube {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
